# connect4

./: .gitignore  CMakeLists.txt  Makefile  MoveSorter.hpp  OpeningBook.hpp  Position.hpp  README.md  Solver.cpp  Solver.hpp  TranspositionTable.hpp  generator.cpp  main.cpp  position.hpp  solver.cpp  solver.hpp
